--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <footer>
       <div class="content">
         <span class="copyright">© 2016  Fotomatic, All Rights Reserved</span>
-        <span class="location">Designed in NYC</span>
+        <span class="location">Designed by Wesley Siwela</span>
       </div>
     </footer>
 
